- Highlight in bold and scroll to newly added torrents (145028)
- Show torrent names in remove torrent and data confirmation dialog (284728)
- Enable select new location button when all non excluded files are missing instead of when all files are missing
- Hide chunkbar when download of stream is complete (259788)
- Suspend/resume queue when middle clicking on tray icon (210027)

Changes in 4.1.3:
- Fix statusbar hiding and showing not working (281674)
- Fix missing items in tray menu (282304)
- Fix move on completion location not being set when open all torrents silently is enabled (279582)

Changes in 4.1.2:
- Fix crash when duplicate trackers are added (274413)
- Fix bug causing quit action not be shown in system tray when not using KDE
- Fix edit script not working in scripting plugin
- Make log output suspension work again
- Fix crash when shutdown_rules files becomes corrupted (277602)
- Fix file rename leading to file being placed in the toplevel directory (279926)

Changes in 4.1.1:
- Make sure that libktorrent translation catalog is inserted (269515)
- Fix wrong tooltip in QM preference page
- Make sure activities list is added again to the GUI after toolbars are edited (269727)
- Prevent port conflicts from happening (268989)
- Clear labels of BasicJobProgressWidget in constructor (270035)
- Make tabbar widget icons follow KDE size changes (270277)
- Fix crash in search plugin (271516)

Changes in 4.1:
- Check if source files are missing before moving them (265607)
- Fix scanextender showing when they are not supposed to (259483)
- Fix mediaplayer unable to stop in buffering mode when streaming (266100)
- KDE 4.4 compatibility fix in search plugin
- Make sure overwrite is possible for the torrent copy file feature
- Fix critical Qt warning when opening context menu in view

Changes in 4.1rc1:
- Make sure that apply button of config dialog is enabled properly when the group changes in the scanfolder settings
- Add kio-magnet